# ChangeLog for app-arch/file-roller
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/file-roller/ChangeLog,v 1.59 2004/02/07 23:22:50 agriffis Exp $

*file-roller-2.4.4-r2 (07 Feb 2004)

  07 Feb 2004; Aron Griffis <agriffis@gentoo.org> file-roller-2.4.4-r2.ebuild:
  Patch to use GNU tar by absolute PATH. On Gentoo, star installs in /usr/bin,
  GNU tar in /bin. But star has different options and doesn't work for
  file-roller. Patch to fix 32-bit-isms for bug 39829. Mark stable on alpha and
  ia64 since the current stable on those arches isn't working right anyway.

  06 Feb 2004; Bartosch Pixa <darkspecter@gentoo.org>
  file-roller-2.4.2-r1.ebuild:
  set ppc in keywords

*file-roller-2.4.4-r1 (06 Feb 2004)

  06 Feb 2004; <spider@gentoo.org> file-roller-2.2.5.ebuild,
  file-roller-2.4.0.1.ebuild, file-roller-2.4.1.1.ebuild,
  file-roller-2.4.2-r1.ebuild, file-roller-2.4.2.ebuild,
  file-roller-2.4.4-r1.ebuild, file-roller-2.4.4.ebuild:
  Throw RDEPEND and DEPEND around so they match reality

  29 Jan 2004; Aron Griffis <agriffis@gentoo.org> file-roller-2.4.2.ebuild:
  stable on alpha and ia64

  28 Jan 2004; <gustavoz@gentoo.org> file-roller-2.4.2.ebuild:
  stable on hppa and sparc

*file-roller-2.4.4 (27 Jan 2004)

  27 Jan 2004; foser <foser@gentoo.org> file-roller-2.4.4.ebuild :
  New release

  06 Jan 2004; <gustavoz@gentoo.org> file-roller-2.4.1.1.ebuild:
  marked stable on sparc

  13 Dec 2003; Guy Martin <gmsoft@gentoo.org> file-roller-2.4.1.1.ebuild:
  Marked stable on hppa.

*file-roller-2.4.2 (18 Nov 2003)

  18 Nov 2003; foser <foser@gentoo.org> file-roller-2.4.2.ebuild :
  New release, minor dep fixes

  14 Nov 2003; Aron Griffis <agriffis@gentoo.org> file-roller-2.4.0.1.ebuild:
  Stable on ia64

  08 Nov 2003; Todd Sunderlin <todd@gentoo.org> file-roller-2.4.0.1.ebuild:
  Added sparc keyword

  22 Oct 2003; Bartosch Pixa <darkspecter@gentoo.org>
  file-roller-2.4.0.1.ebuild: