@@ -1,10 +1,10 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/file-roller/Attic/file-roller-2.4.1.1.ebuild,v 1.5 2004/02/06 02:24:59 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/file-roller/Attic/file-roller-2.4.1.1.ebuild,v 1.6 2004/02/08 21:47:48 spider Exp $
 
 inherit gnome2
 
-DESCRIPTION="archive manager for GNOME"
+DESCRIPTION="Archive manager for GNOME"
 HOMEPAGE="http://fileroller.sourceforge.net/"
 
 SLOT="0"
