@@ -1,10 +1,10 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/file-roller/Attic/file-roller-2.4.2-r1.ebuild,v 1.2 2004/02/06 15:18:02 darkspecter Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/file-roller/Attic/file-roller-2.4.2-r1.ebuild,v 1.3 2004/02/08 21:47:48 spider Exp $
 
 inherit gnome2
 
-DESCRIPTION="archive manager for GNOME"
+DESCRIPTION="Archive manager for GNOME"
 HOMEPAGE="http://fileroller.sourceforge.net/"
 
 SLOT="0"
