@@ -1,27 +1,0 @@
-# Copyright 1999-2004 Gentoo Technologies, Inc.
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/file-roller/Attic/file-roller-2.4.4-r1.ebuild,v 1.1 2004/02/06 02:24:59 spider Exp $
-
-inherit gnome2
-
-DESCRIPTION="Archive manager for GNOME"
-HOMEPAGE="http://fileroller.sourceforge.net/"
-
-SLOT="0"
-LICENSE="GPL-2"
-KEYWORDS="~x86 ~ppc ~alpha ~sparc ~hppa ~amd64 ~ia64"
-
-RDEPEND=">=dev-libs/glib-2
-	>=x11-libs/gtk+-2.1
-	>=gnome-base/libgnome-2.1
-	>=gnome-base/libgnomeui-2.1
-	>=gnome-base/gnome-vfs-2.2
-	>=gnome-base/libglade-2
-	>=gnome-base/libbonobo-2
-	>=gnome-base/libbonoboui-2"
-
-DEPEND="${RDEPEND}
-	dev-util/pkgconfig
-	>=app-text/scrollkeeper-0.3.11"
-
-DOCS="AUTHORS COPYING ChangeLog INSTALL NEWS README TODO"
