@@ -1,17 +1,17 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/file-roller/Attic/file-roller-2.4.4-r2.ebuild,v 1.2 2004/02/08 00:10:39 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/file-roller/Attic/file-roller-2.4.4-r2.ebuild,v 1.3 2004/02/08 21:47:48 spider Exp $
 
 inherit gnome2
 
-DESCRIPTION="archive manager for GNOME"
+DESCRIPTION="Archive manager for GNOME"
 HOMEPAGE="http://fileroller.sourceforge.net/"
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="~x86 ~ppc alpha ~sparc ~hppa ~amd64 ia64"
+KEYWORDS="x86 ~ppc alpha ~sparc ~hppa ~amd64 ia64"
 
-DEPEND=">=dev-libs/glib-2
+RDEPEND=">=dev-libs/glib-2
 	>=x11-libs/gtk+-2.1
 	>=gnome-base/libgnome-2.1
 	>=gnome-base/libgnomeui-2.1
@@ -20,7 +20,7 @@ DEPEND=">=dev-libs/glib-2
 	>=gnome-base/libbonobo-2
 	>=gnome-base/libbonoboui-2"
 
-RDEPEND="${DEPEND}
+DEPEND="${RDEPEND}
 	dev-util/pkgconfig
 	>=app-text/scrollkeeper-0.3.11"
 
