@@ -1,6 +1,11 @@
 # ChangeLog for app-arch/file-roller
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/file-roller/ChangeLog,v 1.59 2004/02/07 23:22:50 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/file-roller/ChangeLog,v 1.60 2004/02/08 21:47:48 spider Exp $
+
+  08 Feb 2004; <spider@gentoo.org> file-roller-2.4.1.1.ebuild,
+  file-roller-2.4.2-r1.ebuild, file-roller-2.4.4-r1.ebuild,
+  file-roller-2.4.4-r2.ebuild:
+  x86 stable, refix RDEPEND/DEPEND, corrected DESCRIPTION
 
 *file-roller-2.4.4-r2 (07 Feb 2004)
 
